# CLTR_test

./: .gitignore  README.md  empatica_batch_pipeline.py  empatica_interactive_report.py  environment.yml  pyproject.toml
datasets/: timeline_by_minutes.csv
datasets/empatica_test/P01_D01_DIM-MOR/: eda.csv  segments_used.csv  steps.csv  systolic_peaks.csv  temperature.csv
datasets/empatica_test/P01_D02_BRI-MID/: eda.csv  segments_used.csv  steps.csv  systolic_peaks.csv  temperature.csv
datasets/empatica_test/P01_D03_BRI-MOR/: eda.csv  segments_used.csv  steps.csv  systolic_peaks.csv  temperature.csv
datasets/empatica_test/P02_D01_BRI-MID/: eda.csv  segments_used.csv  steps.csv  systolic_peaks.csv  temperature.csv
datasets/empatica_test/P02_D02_DIM-MOR/: eda.csv  segments_used.csv  steps.csv  systolic_peaks.csv  temperature.csv
datasets/empatica_test/P02_D03_DIM-MID/: eda.csv  segments_used.csv  steps.csv  systolic_peaks.csv  temperature.csv
src/: analysis.py  cli.py  interactive_report.py  io.py  pdf_report.py  pipeline.py  processing.py  utils.py
